# ebupt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  store.jsx  utils.js
frontend/src/components/: BrowsePicker.jsx  ClaimWizard.jsx  DetailModal.jsx  Modal.jsx  Shell.jsx  SubmitReviewModal.jsx
frontend/src/components/media/: MediaCardGrid.jsx  MediaPosterCard.jsx
frontend/src/pages/: Archives.jsx  Claims.jsx  Emby.jsx  Hall.jsx  Login.jsx  Settings.jsx
